# sports-bet-quant-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.setup.ts
dashboard/src/: App.tsx  index.css
models/: logistic_v1.joblib  logistic_v1_20260323_032600_metrics.json
models/props/: aces_v1.joblib
src/api/: deps.py  jobs.py  main.py  schemas.py
src/backtest/: __init__.py  kelly.py  monte_carlo.py  reporting.py  runner.py  walk_forward.py
src/db/: connection.py  schema.sql
src/features/: __init__.py  builder.py  court_speed.py  fatigue.py  form.py  h2h.py  ranking.py  tourney.py
src/ingestion/: __main__.py  cleaner.py  downloader.py  loader.py  tml_downloader.py  tml_id_mapper.py  validator.py
src/model/: __init__.py  base.py  bayesian.py  ensemble.py  logistic.py  metrics.py  predictor.py  trainer.py  xgboost_model.py
src/odds/: cli.py  devig.py  ingester.py  linker.py
src/props/: __init__.py  __main__.py  aces.py  base.py  breaks_of_serve.py  double_faults.py  first_set_winner.py  games_won.py  resolver.py  scanner.py  score_parser.py  sets_won.py
src/ratings/: decay.py  glicko.py  seeder.py
src/refresh/: __init__.py  __main__.py  runner.py  (+1 more)
tests/: conftest.py  test_api.py  test_api_paper.py  test_api_signals.py  test_api_simulation.py  test_api_write.py  test_backtest.py  test_backtest_reporting.py  test_builder.py  test_cleaner.py  test_court_speed.py  test_downloader.py  test_ensemble.py  test_features.py  test_glicko.py  test_ingestion_cli.py  test_integration.py  test_loader.py  test_loader_ingestion.py  test_loader_tml.py  test_model.py  test_model_bayesian.py  test_model_registry.py  test_model_xgboost.py  test_odds.py  test_props.py  test_props_scanner.py  test_refresh.py  test_sentiment.py  test_simulation.py  test_tml_downloader.py  test_tml_id_mapper.py  test_validator.py  test_walk_forward_multimodel.py
(+135 files in other folders)
