[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-bet-quant-model"
version = "0.1.0"
description = "Quantitative tennis betting model with ATP data ingestion, feature engineering, and EV analysis"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "tqdm>=4.0.0",
    "glicko2==2.1.0",
    "transformers>=4.30.0",
    "feedparser==6.0.12",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "rapidfuzz>=3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
ml = [
    "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
